k8s/cassandra-autoscaler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-autoscaler
  namespace: default
  labels:
    app: cassandra-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-autoscaler
  template:
    metadata:
      labels:
        app: cassandra-autoscaler
    spec:
      serviceAccountName: cassandra-autoscaler
      containers:
        - name: autoscaler
          image: docker.io/bitnami/kubectl:latest
          command:
            - /bin/sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
