k8s/ingress-rails.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.174-138-124-240.nip.io
    secretName: rails-tls
  rules:
  - host: api.174-138-124-240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rails
            port:
              number: 3000
